example/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: example
    env: development
    type: app
  name: example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example
      env: development
      type: app
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: example
        env: development
        type: app
    spec:
      containers:
        - name: example
          image: rafarlopes/cicd-example:363b2b9
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
