example/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example
    env: development
    type: app
  name: example
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: example
    env: development
    type: app
