example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: example-ingress
spec:
  rules:
  - host: example.rrlopes.com
    http:
      paths:
      - backend:
          service:
            name: example
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - example.rrlopes.com
    secretName: example-tls-certificate
